# searchengine

./: .gitignore  Cargo.toml  README.md
src/: block_index.rs  content_extractor.rs  crawler.rs  document.rs  index.rs  indexer.rs  main.rs  parser.rs  ranker.rs  searcher.rs  term.rs  tokenizer.rs
testdata/: test_full_page.txt  test_full_page2.txt  test_full_page2_tokens.txt  test_full_page_body.txt
