[package]
name = "searchengine"
version = "0.1.0"
authors = ["Anton Jansson <anton_jansson@live.se>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
crossbeam = "0.7"
futures = "0.3"
regex = "1"
url = "2.1"
tempfile = "3.1.0"